[tool.poetry]
name = "imcntr"
version = "0.1.0"
description = "A package providing an API for imaging controller based on an Arduino Nano Every to communicate via serial port."
authors = ["Clemens Trunner"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
